--- a/childhood-games-pack/childhood-games-pack.csproj
+++ b/childhood-games-pack/childhood-games-pack.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -60,6 +61,13 @@
     <Compile Include="tanks\TanksMainForm.Designer.cs">
       <DependentUpon>TanksMainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="tetris\Figure.cs" />
+    <Compile Include="tetris\TetrisMainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="tetris\TetrisMainForm.Designer.cs">
+      <DependentUpon>TetrisMainForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -74,6 +82,9 @@
     </Compile>
     <EmbeddedResource Include="tanks\TanksMainForm.resx">
       <DependentUpon>TanksMainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="tetris\TetrisMainForm.resx">
+      <DependentUpon>TetrisMainForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
