--- a/childhood-games-pack/childhood-games-pack.csproj
+++ b/childhood-games-pack/childhood-games-pack.csproj
@@ -54,23 +54,29 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="tanks\CompTankForm.cs">
+    <Compile Include="tanks\Bullet.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="tanks\CompTankForm.Designer.cs">
-      <DependentUpon>CompTankForm.cs</DependentUpon>
+    <Compile Include="tanks\Bullet.Designer.cs">
+      <DependentUpon>Bullet.cs</DependentUpon>
     </Compile>
-    <Compile Include="tanks\UserTankForm.cs">
+    <Compile Include="tanks\CompTank.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="tanks\UserTankForm.Designer.cs">
-      <DependentUpon>UserTankForm.cs</DependentUpon>
+    <Compile Include="tanks\CompTank.Designer.cs">
+      <DependentUpon>CompTank.cs</DependentUpon>
     </Compile>
-    <Compile Include="tanks\TanksMainForm.cs">
+    <Compile Include="tanks\UserTank.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="tanks\TanksMainForm.Designer.cs">
-      <DependentUpon>TanksMainForm.cs</DependentUpon>
+    <Compile Include="tanks\UserTank.Designer.cs">
+      <DependentUpon>UserTank.cs</DependentUpon>
+    </Compile>
+    <Compile Include="tanks\TanksMainMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="tanks\TanksMainMenu.Designer.cs">
+      <DependentUpon>TanksMainMenu.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
@@ -85,14 +91,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="tanks\CompTankForm.resx">
-      <DependentUpon>CompTankForm.cs</DependentUpon>
+    <EmbeddedResource Include="tanks\Bullet.resx">
+      <DependentUpon>Bullet.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="tanks\UserTankForm.resx">
-      <DependentUpon>UserTankForm.cs</DependentUpon>
+    <EmbeddedResource Include="tanks\CompTank.resx">
+      <DependentUpon>CompTank.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="tanks\TanksMainForm.resx">
-      <DependentUpon>TanksMainForm.cs</DependentUpon>
+    <EmbeddedResource Include="tanks\UserTank.resx">
+      <DependentUpon>UserTank.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="tanks\TanksMainMenu.resx">
+      <DependentUpon>TanksMainMenu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -115,6 +124,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="tanks\res\heavy_tank.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tanks\res\light_utank_d.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tanks\res\light_utank_l.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tanks\res\light_utank_r.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tanks\res\light_utank_u.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
