--- a/childhood-games-pack/childhood-games-pack.csproj
+++ b/childhood-games-pack/childhood-games-pack.csproj
@@ -240,5 +240,8 @@
   <ItemGroup>
     <None Include="resources\tetris_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\tennis_logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
